# FinanceDashboard

./: .dockerignore  .gitignore  Dockerfile  database.py  docker-compose.yml  healthcheck.py  k8s-deploy.yaml  main.py  metrics.py  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
puppet/: install.pp
tests/: test_database.py
