[project]
name = "finance-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "nadhish2023"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "statsd (>=4.0.1,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
